# Fanuc-CRX10ia-L-using-ROS2-Humble-and-MoveIt2

./: README.md
Fanuc-CRX-10iA-L-Robot--Trajectory-using-Moveit2/: .gitignore  readme.md
Fanuc-CRX-10iA-L-Robot--Trajectory-using-Moveit2/fanuc_ws/src/crx10ia_l_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
Fanuc-CRX-10iA-L-Robot--Trajectory-using-Moveit2/fanuc_ws/src/crx10ia_l_moveit_config/config/: crx10ial.ros2_control.xacro  crx10ial.srdf  crx10ial.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz
Fanuc-CRX-10iA-L-Robot--Trajectory-using-Moveit2/fanuc_ws/src/crx10ia_l_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py  (+1 more)
Fanuc-CRX-10iA-L-Robot--Trajectory-using-Moveit2/fanuc_ws/src/crx_description/: CMakeLists.txt  package.xml
Fanuc-CRX-10iA-L-Robot--Trajectory-using-Moveit2/fanuc_ws/src/crx_description/launch/: view_robot.launch.py  view_softgripper.launch.py
Fanuc-CRX-10iA-L-Robot--Trajectory-using-Moveit2/fanuc_ws/src/crx_description/meshes/softgripper/: quick_changer.stl  softgripper_finger.stl  softgripper_mount.stl
Fanuc-CRX-10iA-L-Robot--Trajectory-using-Moveit2/fanuc_ws/src/crx_description/urdf/: crx10ia_l.urdf.xacro  crx10ia_l.xacro  simulation_interface.xacro  softgripper.urdf.xacro  utils.xacro
Fanuc-CRX-10iA-L-Robot--Trajectory-using-Moveit2/fanuc_ws/src/crx_description/world/: empty_world.sdf
Fanuc-CRX-10iA-L-Robot--Trajectory-using-Moveit2/fanuc_ws/src/moveit2_scripts/: CMakeLists.txt
(+2 files in other folders)
