<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crx_description</name>
  <version>1.1.0</version>
  <description>Robot description package for the Fanuc CRX10iA/L</description>
  <maintainer email="aaqibmahamood1@gmail.com">Aaqib Mahamood</maintainer>
  <license>Apache Licence 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
